--- a/engine.html
+++ b/engine.html
@@ -52,7 +52,7 @@ $def with (name)
     var player_name = "zonky"
     var player_level = 1
     var player_stage = 1
-    var player_progress = [1]
+    var player_progress = [0,1]
     var control_scheme = 1
     var game_mode = 1
     var game_record = ""
@@ -1128,15 +1128,15 @@ $def with (name)
               player_stage++
 
               // update player progress
-              if(player_progress[player_level - 1] < player_stage)
-                player_progress[player_level - 1] = player_stage
+              if(player_progress[player_level] < player_stage)
+                player_progress[player_level] = player_stage
 
             } else {
               player_level++
               player_stage = 1
 
               // update player progress
-              if(player_progress.length < player_level)
+              if(player_progress.length - 1 < player_level)
                 player_progress.push(player_stage)
 
             }
@@ -2271,8 +2271,9 @@ $def with (name)
       var latest_edit
       findEditLevels(function(latest) {
         latest_edit = latest
+        player_progress[0] = latest - 1
       })
-      var level_select_string = player_progress.length + "-" + player_progress[player_progress.length-1]
+      var level_select_string = (player_progress.length-1) + "-" + player_progress[player_progress.length-1]
 
       this.back = function() { 
           var this_menu = menus.pop()
@@ -2287,8 +2288,8 @@ $def with (name)
             menus.push(level_select_menu)
             level_select_menu.parent.setActiveMenu(level_select_menu,active_menu)
             level_edit = false
-            level_select_string = player_progress.length + "-" + player_progress[player_progress.length-1]
-            player_level = player_progress.length
+            level_select_string = (player_progress.length-1) + "-" + player_progress[player_progress.length-1]
+            player_level = player_progress.length - 1
             player_stage = player_progress[player_progress.length - 1]
             level_select_menu.items[0].text = level_select_string
           }))
@@ -2325,18 +2326,15 @@ $def with (name)
 
             if (level_edit) {
 
-              console.log(player_stage)
-              console.log(latest_edit)
               if (player_stage < latest_edit)
                 player_stage++
 
             } else {
 
-              if (player_stage < 10) {
-                if (player_stage < player_progress[player_level-1])
-                  player_stage++
+              if (player_stage < player_progress[player_level]) {
+                player_stage++
               } else {
-                if (player_level < player_progress.length) {
+                if (player_level < player_progress.length - 1) {
                   player_level++
                   player_stage = 1
                 }
@@ -2353,10 +2351,10 @@ $def with (name)
 
             if (player_stage > 1)
               player_stage--
-            else if (player_level > 1){
+            else if (player_level > 0 && player_progress[player_level-1] > 0){
               if(level_edit) return
               player_level--
-              player_stage = 10
+              player_stage = player_progress[player_level]
             }
 
             level_select_string = player_level + "-" + player_stage
